--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,16 @@
-sudo: false
 language: node_js
-cache:
-  yarn: true
-  directories:
-    - node_modules
+
 node_js:
+  - '7'
   - '6'
-script:
-  - yarn test
-branches:
-  only:
-    - master
+  - '5'
+  - '4'
+
+cache:
+  directories:
+    - $HOME/.npm
+    - $HOME/.yarn-cache
+    - node_modules
+
+test:
+  - yarn lint
